fixed header z-index

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -7,7 +7,7 @@
     max-width: 100%;
     margin: 0 auto;
     width: 100%;
-    z-index: 1;
+    z-index: 4;
 }
 .brand__wrapper .brand__link{
     color: white;
